adds get all suvs
